Initial, untested: merge upstream<-newtroy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ retry_files_enabled = False
 host_key_checking = False
 timeout = 60
 stdout_callback = full_skip
+vault_password_file = .vault-pass-script
 
 [paramiko_connection]
 record_host_keys = False
