--- a/config.cfg
+++ b/config.cfg
@@ -90,9 +90,10 @@ unattended_reboot:
   enabled: false
   time: 06:00
 
-pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
-VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
-CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
+## NEWTROY change. Commented out. Now set in roles/vpn/tasks/client_configs.yml
+# pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
+# VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
+# CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
 # Block traffic between connected clients
 BetweenClients_DROP: true
