--- a/roles/vpn/defaults/main.yml
+++ b/roles/vpn/defaults/main.yml
@@ -2,7 +2,7 @@
 strongswan_shell: /usr/sbin/nologin
 strongswan_home: /var/lib/strongswan
 BetweenClients_DROP: true
-wireguard_config_path: "configs/{{ IP_subject_alt_name }}/wireguard/"
+wireguard_config_path: "{{ newtroy_server_configs }}/wireguard/"
 wireguard_interface: wg0
 wireguard_network_ipv4:
   subnet: 10.19.49.0
