--- a/config.cfg
+++ b/config.cfg
@@ -90,10 +90,9 @@ unattended_reboot:
   enabled: false
   time: 06:00
 
-## NEWTROY change. Commented out. Now set in roles/vpn/tasks/client_configs.yml
-# pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
-# VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
-# CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
+pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
+VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
+CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
 # Block traffic between connected clients
 BetweenClients_DROP: true
