--- a/roles/common/tasks/facts.yml
+++ b/roles/common/tasks/facts.yml
@@ -5,8 +5,6 @@
       module: shell
         openssl rand -hex 16
     register: CA_password
-    register: CA_password_generated
-    when: CA_password is not defined
 
   - name: Generate p12 export password
     local_action:
@@ -23,7 +21,7 @@
   tags: update-users
 
 - set_fact:
-    CA_password: easyrsa_CA_password: "{{ CA_password|default(CA_password_generated.stdout) }}"
+    CA_password: "{{ CA_password.stdout }}"
     IP_subject_alt_name: "{{ IP_subject_alt_name }}"
 
 - name: Set IPv6 support as a fact
