--- a/cloud.yml
+++ b/cloud.yml
@@ -17,6 +17,11 @@
           tags: always
 
   roles:
+
+    # Run this role first to set client IP addresses early
+    - role: dns_vpn_internal_network_route53
+      tags: ['dns_vpn_internal_network_route53'] }
+
     - role: cloud-digitalocean
       when: algo_provider == "digitalocean"
     - role: cloud-ec2
@@ -35,6 +40,11 @@
       when: algo_provider == "openstack"
     - role: local
       when: algo_provider == "local"
+
+    # Ensure this role comes after the deployment -
+    # it relies on the VPN server being deployed
+    - role: dns_vpn_server_route53
+      tags: ['dns_vpn_server_route53'] }
 
   post_tasks:
     - block:
