--- a/roles/vpn/defaults/main.yml
+++ b/roles/vpn/defaults/main.yml
@@ -65,3 +65,11 @@ ciphers:
   compat:
     ike: aes256gcm16-prfsha512-ecp384,aes256-sha2_512-prfsha512-ecp384,aes256-sha2_384-prfsha384-ecp384!
     esp: aes256gcm16-ecp384,aes256-sha2_512-prfsha512-ecp384!
+
+# "Name-based UUIDs" per RFC4122. Will return the same value given the same "name" (pipe data)
+# and the same "namespace" (passed to the newtroy_nbuuid function in parens).
+# You can generate a UUID to act as a namespace for other UUIDs hierarchically.
+newtroy_this_server_namespace: "{{ newtroy_server_cert_common_name | newtroy_nbuuid(newtroy_algo_namespace) }}"
+pkcs12_PayloadCertificateUUID: "{{ 'pkcs12_PayloadCertificateUUID' | newtroy_nbuuid(newtroy_this_server_namespace) }}"
+VPN_PayloadIdentifier: "{{ 'VPN_PayloadIdentifier' | newtroy_nbuuid(newtroy_this_server_namespace) }}"
+CA_PayloadIdentifier: "{{ 'CA_PayloadIdentifier' | newtroy_nbuuid(newtroy_this_server_namespace) }}"
