Get working system, nice

--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -51,6 +51,7 @@ newtroy_vpn_internal_domain: internal.micahrl.com
 # If defined, update a Route53 Hosted Zone as described above
 newtroy_vpn_internal_hosted_zone_id: Z2OOB3F1JEVLME
 
+aws_server_name: newtroy
 
 ### Upstream Algo settings
 # See config.cfg and/or input.yml for more info
