--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-setuptools>=11.3
-ansible[azure]==2.4.3
-dopy==0.3.5
-boto>=2.5
-boto3
-apache-libcloud
-six
-pyopenssl
-jinja2==2.8
+ansible==2.5.2
+
+# newtroy stuff
 netaddr
-shade
-pycrypto
+
+# required for my route53 stuff
+# TODO: refactor this to work like algo does
+#boto3
+#boto
