--- a/roles/dns_vpn_server_route53/defaults/main.yml
+++ b/roles/dns_vpn_server_route53/defaults/main.yml
@@ -1,3 +1,7 @@
+---
+
+ec2_venv: "{{ playbook_dir }}/configs/.venvs/aws"
+
 # WARNING: This relies on the current behavior of upstream algo
 #
 # At the time of this writing, Algo adds the cloud VPN server to a group called 'vpn-host'
