--- a/roles/dns_vpn_server_route53/tasks/main.yml
+++ b/roles/dns_vpn_server_route53/tasks/main.yml
@@ -1,20 +1,28 @@
 ---
 
-- name: Set DNS entry for VPN server
-  route53:
-    state: present
-    aws_access_key: "{{ aws_access_key | default(lookup('env','AWS_ACCESS_KEY_ID'), true)}}"
-    aws_secret_key: "{{ aws_secret_key | default(lookup('env','AWS_SECRET_ACCESS_KEY'), true)}}"
-    # region: "{{ region }}"
-    overwrite: yes
-    retry_interval: 15
-    hosted_zone_id: "{{ newtroy_vpn_server_hosted_zone_id }}"
-    zone: "{{ newtroy_vpn_server_parent_domain }}"
-    record: "{{ newtroy_vpn_server_fqdn }}"
-    type: A
-    ttl: 300
-    value: "{{ vpn_host_ip }}"
-    wait: yes
+- block:
+
+  - name: Build python virtual environment
+    import_tasks: venv.yml
+
+  - name: Set DNS entry for VPN server
+    route53:
+      state: present
+      aws_access_key: "{{ aws_access_key | default(lookup('env','AWS_ACCESS_KEY_ID'), true)}}"
+      aws_secret_key: "{{ aws_secret_key | default(lookup('env','AWS_SECRET_ACCESS_KEY'), true)}}"
+      # region: "{{ region }}"
+      overwrite: yes
+      retry_interval: 15
+      hosted_zone_id: "{{ newtroy_vpn_server_hosted_zone_id }}"
+      zone: "{{ newtroy_vpn_server_parent_domain }}"
+      record: "{{ newtroy_vpn_server_fqdn }}"
+      type: A
+      ttl: 300
+      value: "{{ vpn_host_ip }}"
+      wait: yes
+    environment:
+      PYTHONPATH: "{{ ec2_venv }}/lib/python2.7/site-packages/"
+
   when:
   - newtroy_vpn_server_hosted_zone_id is defined
   - newtroy_vpn_server_fqdn is defined
