Rollup uncommitted from 2 months ago
- Update readme and newewtroy-todo
- Remove recommendation for env.PSYOPS
- Add newtroy-input playbook
- Add newtroy-postdeploy playbook
- send tags in newtroy.py
- misc other
- Remove broken configs/ tarball

--- a/main.yml
+++ b/main.yml
@@ -2,6 +2,9 @@
 - name: Include prompts playbook
   import_playbook: input.yml
 
+- name: Include newtroy input playbook
+  import_playbook: newtroy-input.yml
+
 - name: Include cloud provisioning playbook
   import_playbook: cloud.yml
 
@@ -10,3 +13,6 @@
 
 - name: Include server configuration playbook
   import_playbook: server.yml
+
+- name: Include newtroy post server deployment tasks
+  import_playbook: newtroy-postdeploy.yml
