--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -38,6 +38,9 @@ newtroy_vpn_server_parent_domain: micahrl.com
 newtroy_vpn_server_fqdn: "{{ newtroy_vpn_server_hostname }}.{{ newtroy_vpn_server_parent_domain }}"
 newtroy_vpn_server_hosted_zone_id: Z3HVGWA7OSS1TK
 
+# Fix the stupid config file path
+newtroy_config_dir: configs/{{ newtroy_vpn_server_fqdn }}
+
 # Used for resolving hosts within the VPN, not connecting to the VPN
 # - Set BetweenClients_DROP to N so that clients can actually talk to each other
 # - If dns_adblocking role is enabled, configure dnsmasq to resolve the clients
