--- a/roles/vpn/tasks/openssl.yml
+++ b/roles/vpn/tasks/openssl.yml
@@ -7,13 +7,13 @@
 
   - name: Ensure the pki directory does not exist
     file:
-      dest: configs/{{ IP_subject_alt_name }}/pki
+      dest: "{{ newtroy_config_dir }}/pki"
       state: absent
     when: keys_clean_all|bool == True
 
   - name: Ensure the pki directories exist
     file:
-      dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
+      dest: "{{ newtroy_config_dir }}/pki/{{ item }}"
       state: directory
       recurse: yes
       mode: '0700'
@@ -28,7 +28,7 @@
 
   - name: Ensure the files exist
     file:
-      dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
+      dest: "{{ newtroy_config_dir }}/pki/{{ item }}"
       state: touch
     with_items:
       - ".rnd"
@@ -40,7 +40,7 @@
   - name: Generate the openssl server configs
     template:
       src: openssl.cnf.j2
-      dest: "configs/{{ IP_subject_alt_name }}/pki/openssl.cnf"
+      dest: "{{ newtroy_config_dir }}/pki/openssl.cnf"
 
   - name: Build the CA pair
     shell: >
@@ -55,20 +55,20 @@
       -passout pass:"{{ CA_password }}" &&
       touch {{ IP_subject_alt_name }}_ca_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
       creates: "{{ IP_subject_alt_name }}_ca_generated"
       executable: bash
 
   - name: Copy the CA certificate
     copy:
-      src: "configs/{{ IP_subject_alt_name }}/pki/cacert.pem"
-      dest: "configs/{{ IP_subject_alt_name }}/cacert.pem"
+      src: "{{ newtroy_config_dir }}/pki/cacert.pem"
+      dest: "{{ newtroy_config_dir }}/cacert.pem"
       mode: 0600
 
   - name: Generate the serial number
     shell: echo 01 > serial && touch serial_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
       creates: serial_generated
 
   - name: Build the server pair
@@ -90,7 +90,7 @@
       -subj "/CN={{ IP_subject_alt_name }}" &&
       touch certs/{{ IP_subject_alt_name }}_crt_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
       creates: certs/{{ IP_subject_alt_name }}_crt_generated
       executable: bash
 
@@ -113,7 +113,7 @@
       -subj "/CN={{ item }}" &&
       touch certs/{{ item }}_crt_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
       creates: certs/{{ item }}_crt_generated
       executable: bash
     with_items: "{{ users }}"
@@ -121,15 +121,15 @@
   - name: Create links for the private keys
     file:
       src: "pki/private/{{ item }}.key"
-      dest: "configs/{{ IP_subject_alt_name }}/{{ item }}.ssh.pem"
+      dest: "{{ newtroy_config_dir }}/{{ item }}.ssh.pem"
       state: link
       force: true
     with_items: "{{ users }}"
 
   - name: Build openssh public keys
     openssl_publickey:
-      path:  "configs/{{ IP_subject_alt_name }}/pki/public/{{ item }}.pub"
-      privatekey_path: "configs/{{ IP_subject_alt_name }}/pki/private/{{ item }}.key"
+      path:  "{{ newtroy_config_dir }}/pki/public/{{ item }}.pub"
+      privatekey_path: "{{ newtroy_config_dir }}/pki/private/{{ item }}.key"
       format: OpenSSH
     with_items: "{{ users }}"
 
@@ -144,15 +144,15 @@
       -out private/{{ item }}.p12
       -passout pass:"{{ p12_export_password }}"
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
       executable: bash
     with_items: "{{ users }}"
     register: p12
 
   - name: Copy the p12 certificates
     copy:
-      src: "configs/{{ IP_subject_alt_name }}/pki/private/{{ item }}.p12"
-      dest: "configs/{{ IP_subject_alt_name }}/{{ item }}.p12"
+      src: "{{ newtroy_config_dir }}/pki/private/{{ item }}.p12"
+      dest: "{{ newtroy_config_dir }}/{{ item }}.p12"
       mode: 0600
     with_items:
       - "{{ users }}"
@@ -164,7 +164,7 @@
       awk '{print $5}' |
       sed 's/\/CN=//g'
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_config_dir }}/pki/"
     register: valid_certs
 
   - name: Revoke non-existing users
@@ -176,7 +176,7 @@
       -out crl/{{ item }}.crt
     register: gencrl
     args:
-      chdir: configs/{{ IP_subject_alt_name }}/pki/
+      chdir: "{{ newtroy_config_dir }}/pki/"
       creates: crl/{{ item }}.crt
       executable: bash
     when: item not in users
@@ -192,7 +192,7 @@
       - gencrl is defined
       - gencrl.changed
     args:
-      chdir: configs/{{ IP_subject_alt_name }}/pki/
+      chdir: "{{ newtroy_config_dir }}/pki/"
       executable: bash
   delegate_to: localhost
   become: no
@@ -201,7 +201,7 @@
 
 - name: Copy the CRL to the vpn server
   copy:
-    src: configs/{{ IP_subject_alt_name }}/pki/crl/algo.root.pem
+    src: "{{ newtroy_config_dir }}/pki/crl/algo.root.pem"
     dest: "{{ config_prefix|default('/') }}etc/ipsec.d/crls/algo.root.pem"
   when:
     - gencrl is defined
