newtroy_venvs_dir var

--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -40,6 +40,8 @@ newtroy_vpn_server_hosted_zone_id: Z3HVGWA7OSS1TK
 
 # Fix the stupid config file path
 newtroy_config_dir: configs/{{ newtroy_vpn_server_fqdn }}
+# Fix the stupid venv dir path
+newtroy_venvs_dir: .venvs
 
 # Used for resolving hosts within the VPN, not connecting to the VPN
 # - Set BetweenClients_DROP to N so that clients can actually talk to each other
