--- a/roles/ssh_tunneling/tasks/main.yml
+++ b/roles/ssh_tunneling/tasks/main.yml
@@ -41,7 +41,7 @@
     - name: The authorized keys file created
       authorized_key:
         user: "{{ item }}"
-        key: "{{ lookup('file', 'configs/' + IP_subject_alt_name + '/pki/public/' + item + '.pub') }}"
+        key: "{{ lookup('file', newtroy_config_dir + '/pki/public/' + item + '.pub') }}"
         state: present
         manage_dir: true
         exclusive: true
@@ -49,7 +49,7 @@
       tags: update-users
 
     - name: Generate SSH fingerprints
-      shell: ssh-keyscan {{ IP_subject_alt_name }} 2>/dev/null
+      shell: ssh-keyscan {{ newtroy_vpn_server_fqdn }} 2>/dev/null
       register: ssh_fingerprints
 
     - name: Fetch the known_hosts file
