--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -57,6 +57,22 @@ newtroy_vpn_internal_domain: internal.micahrl.com
 # If defined, update a Route53 Hosted Zone as described above
 newtroy_vpn_internal_hosted_zone_id: Z2OOB3F1JEVLME
 
+# If defined, add other records to the Route53 hosted zone
+newtroy_vpn_internal_hosted_zone_additional_records:
+  - Name: gw1-internal.{{ newtroy_vpn_internal_domain }}.
+    Type: A
+    TTL: 300
+    ResourceRecords: ["192.168.69.1"]
+  - Name: tagasaw.{{ newtroy_vpn_internal_domain }}.
+    Type: A
+    TTL: 300
+    ResourceRecords: ["192.168.69.70"]
+  - Name: chenoska.{{ newtroy_vpn_internal_domain }}.
+    Type: A
+    TTL: 300
+    ResourceRecords: ["192.168.69.71"]
+
+
 aws_server_name: newtroy
 
 ### Upstream Algo settings
