--- a/roles/dns_vpn_internal_network_route53/defaults/main.yml
+++ b/roles/dns_vpn_internal_network_route53/defaults/main.yml
@@ -2,3 +2,5 @@
 
 ec2_venv: "{{ newtroy_venvs_dir }}/aws"
 route53_stack_name: "{{ aws_server_name | replace('.', '-') }}-route53-zone"
+
+newtroy_vpn_internal_hosted_zone_additional_records: []
