Add new clients

--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -83,6 +83,9 @@ users:
   - glitch
   - architect
   - magrassee
+  - neurofornia
+  - tagasaw
+  - gw1
 
 endpoint: "{{ newtroy_vpn_server_fqdn }}"
 server_name: "{{ newtroy_vpn_server_hostname }}"
