Fix bugs related to addtl zone records

--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -58,6 +58,8 @@ newtroy_vpn_internal_domain: internal.micahrl.com
 newtroy_vpn_internal_hosted_zone_id: Z2OOB3F1JEVLME
 
 # If defined, add other records to the Route53 hosted zone
+# (Make sure none of these hostnames are the same as any user lol -
+# users are set up automatically for htis)
 newtroy_vpn_internal_hosted_zone_additional_records:
   - Name: gw1-internal.{{ newtroy_vpn_internal_domain }}.
     Type: A
@@ -82,9 +84,9 @@ users:
   - andraia
   - glitch
   - architect
-  - magrassee
+  # - magrassee
   - neurofornia
-  - tagasaw
+  # - tagasaw
   - gw1
 
 endpoint: "{{ newtroy_vpn_server_fqdn }}"
