Add occult client

--- a/config.newtroy.cfg
+++ b/config.newtroy.cfg
@@ -84,10 +84,8 @@ users:
   - andraia
   - glitch
   - architect
-  # - magrassee
   - neurofornia
-  # - tagasaw
-  - gw1
+  - occult
 
 endpoint: "{{ newtroy_vpn_server_fqdn }}"
 server_name: "{{ newtroy_vpn_server_hostname }}"
